--- a/armario/pom.xml
+++ b/armario/pom.xml
@@ -18,7 +18,11 @@
 		<java.version>21</java.version>
 	</properties>
 	<dependencies>
-
+		<dependency>
+			<groupId>org.mariadb.jdbc</groupId>
+			<artifactId>mariadb-java-client</artifactId>
+			<version>2.7.4</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
